--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="login-box">
       <h2>Enter the garden</h2>
       <input type="password" id="password" placeholder="Password" />
-      <button onclick="checkPassword()">Enter</button>
+      <button id="login-btn">Enter</button>
       <p id="error-message"></p>
     </div>
   </div>
