--- a/index.html
+++ b/index.html
@@ -35,39 +35,23 @@
     Your browser does not support the audio element.
   </audio>
 
-  <!-- Password popup script -->
+  <!-- Password and music script -->
   <script>
     const correctPassword = "iluvdyelii";
     const userPassword = prompt("Enter the garden password:");
     if (userPassword !== correctPassword) {
       alert("Incorrect password!");
-      document.body.innerHTML = ""; // clear page
+      document.body.innerHTML = ""; // clear page if wrong
     } else {
-      // optional: fade in music
-      if (typeof startMusicFadeIn === "function") {
-        window.addEventListener("load", () => startMusicFadeIn());
-      }
+      const bgMusic = document.getElementById("bg-music");
+      bgMusic.play().catch(() => {
+        // If autoplay is blocked, play on next user click
+        document.addEventListener("click", () => {
+          bgMusic.play();
+        }, { once: true });
+      });
     }
   </script>
-<script>
-  const correctPassword = "iluvdyelii";
-  const userPassword = prompt("Enter the garden password:");
-  
-  if (userPassword !== correctPassword) {
-    alert("Incorrect password!");
-    document.body.innerHTML = ""; // clear page
-  } else {
-    const bgMusic = document.getElementById("bg-music");
-    
-    // Try playing music directly
-    bgMusic.play().catch(() => {
-      // If autoplay fails (browser blocks), wait for a click
-      document.addEventListener("click", () => {
-        bgMusic.play();
-      }, { once: true });
-    });
-  }
-</script>
 
   <script src="script.js"></script>
 </body>
